tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__AutomatedStickyR-AAAAAAAAAAAAAAAAAAADqg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 938,
  "prerequisites": [
    620
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you're tired of crafting tons of tree taps, how about a machine that uses power but never breaks? Let's craft an electric tree tap!\n\n(If you're looking for better ways to get Sticky Resin, you might want to consider the Stickreed crop from IC2 crops. To get it, plant Sugarcanes on Crops on an X formation, with spaces between them, and then put 2 Crops on each empty slot. For more information, check the crop quests.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lAutomated Sticky Resin Farmer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    620
  ],
  "rewards": [],
  "tasks": []
}
