tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__AvengersAssemble-AAAAAAAAAAAAAAAAAAAAYQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 97,
  "prerequisites": [
    92
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An absolute must have for fans of the movie. Oh, and to make all the things, of course. There are a number of recipes that take fewer materials to make in the assembler, or can only be made with it, so make it ASAP!\n\nYou can use the battery slot and the other extra slot in the GUI to store unused configuration circuits.\n\nIf you've completed the Silverwood quest on the first tab, you can go to the Twilight Forest after making your Assembler. See the Novice Thaumaturgy tab for details.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lAvengers, Assemble!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    92
  ],
  "rewards": [],
  "tasks": []
}
