tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__BasicArcFurnace-AAAAAAAAAAAAAAAAAAAClg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 662,
  "prerequisites": [
    624
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The arc furnace is an alternative to macerating stuff back into dusts and for making wrought iron, annealed copper, and glass (in MV). You get ingots, and sometimes different materials back from recycling than with a macerator. You also have all 4 slots at LV. The recipes use oxygen and 3A of power.\n\nJust ignore the plasma one.\n\nAnd no, you can't just send 1A of MV. That will blow it up.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBasic Arc Furnace",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    624
  ],
  "rewards": [],
  "tasks": []
}
