tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__BasicCanner-AAAAAAAAAAAAAAAAAAACcA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 624,
  "prerequisites": [
    609
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The canning machine is used to fill batteries, fill cells with stuff (usually dust, not used that often), or to fill tin cans with any kind of food (HV+).\n\nAt LV-HV tier you can make batteries with sodium, cadmium, or lithium.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBasic Canner",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    609
  ],
  "rewards": [],
  "tasks": []
}
