tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__BasicFluidSolidi-AAAAAAAAAAAAAAAAAAAEgw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1155,
  "optional_prerequisites": [
    579,
    543
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "To get your molten fluids back to a solid state you need a fluid solidifier. This is handy for processing molten rubber directly from the chemical reactor. It's used for crossbow bolts as well.\n\nKeep in mind that GT fluids are different from Tinker's Construct. You will mainly work with GT fluids going forward.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBasic Fluid Solidifier",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
