tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__BasicTransportIt-AAAAAAAAAAAAAAAAAAAAcg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 114,
  "prerequisites": [
    113
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to transfer items, you need so called \"nodes\". There are some for pushing items into a pipe system, and later you'll have access to nodes that are able to pull items from attached inventories.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBasic Transport: Items",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    113
  ],
  "rewards": [],
  "tasks": []
}
